--- a/web-app/index.html
+++ b/web-app/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Sun and Moon Rise and Set Progress App</title>
+        <link rel="stylesheet" href="src/style.css">
     </head>
     <body>
         <h1>Sun and Moon Rise and Set Progress App</h1>
