Add lang attribute to <html> tag

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
     <head>
         <title>Sun and Moon Rise and Set Progress App</title>
         <link rel="stylesheet" href="src/style.css">
