--- a/web-app/index.html
+++ b/web-app/index.html
@@ -8,7 +8,7 @@
         <h1>Sun and Moon Rise and Set Progress App</h1>
         <input type="number" id="latitude" placeholder="Enter Latitude" />
         <input type="number" id="longitude" placeholder="Enter Longitude" />
-        <button id="calculate">
+        <button id="calculate" onclick="calculate()">
             Calculate Rise and Set Times and Progress
         </button>
         Sunrise Time: <span id="sunrise"></span><br />
