Add line breaks

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -6,11 +6,15 @@
     </head>
     <body>
         <h1>Sun and Moon Rise and Set Progress App</h1>
-        <input type="number" id="latitude" placeholder="Enter Latitude" />
-        <input type="number" id="longitude" placeholder="Enter Longitude" />
+        <input type="number" id="latitude" placeholder="Enter Latitude" /><br />
+        <input
+            type="number"
+            id="longitude"
+            placeholder="Enter Longitude"
+        /><br />
         <button id="calculate" onclick="calculate()">
-            Calculate Rise and Set Times and Progress
-        </button>
+            Calculate Rise and Set Times and Progress</button
+        ><br />
         Sunrise Time: <span id="sunrise"></span><br />
         Sunset Time: <span id="sunset"></span><br />
         Moonrise Time: <span id="moonrise"></span><br />
