Add default values to latitude and longitude

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -12,6 +12,7 @@
             placeholder="Enter Latitude"
             min="-90"
             max="90"
+            value="0"
         /><br />
         <input
             type="number"
@@ -19,6 +20,7 @@
             placeholder="Enter Longitude"
             min="-180"
             max="180"
+            value="0"
         /><br />
         <button id="calculate" onclick="calculate()">
             Calculate Rise and Set Times and Progress</button
