--- a/web-app/index.html
+++ b/web-app/index.html
@@ -13,6 +13,7 @@
             min="-90"
             max="90"
             value="0"
+            required
         /><br />
         <input
             type="number"
@@ -21,6 +22,7 @@
             min="-180"
             max="180"
             value="0"
+            required
         /><br />
         <button id="calculate" onclick="calculate()">
             Calculate Rise and Set Times and Progress</button
